grammar.js
    start: $ => choice(
      $.program_definition,
      $.copybook_definition
      //optional($.function_definition) //todo
    ),

    comment: $ => /\*>[^\n]*/,

    program_definition: $ => prec.right(seq(
      $.identification_division,
      optional($.environment_division),
      optional($.data_division),
      optional($.procedure_division), //todo
      repeat($.end_program), //todo
      //optional($.LINE_PREFIX_COMMENT),
    )),

    identification_division: $ => seq(
      choice($._IDENTIFICATION, $._ID_ABBR), $._DIVISION, '.',
      optional(
        seq($._PROGRAM_ID, '.',
          $.program_name,
          optional(choice(
            $.as_literal,
            $.is_initial,
            $.is_common)),
          '.')),
      repeat(choice(
        $.author_section,
        $.installation_section,
        $.date_written_section,
        $.date_compiled_section,
        $.security_section)),
    ),

    program_name: $ => choice(
      $._WORD,
      $._LITERAL
    ),

    data_division: $ => seq(
      $._DATA, $._DIVISION, '.',
      optional($.file_section),
      optional($.working_storage_section),
      optional($.local_storage_section),
      optional($.linkage_section),
      optional($.report_section),
      optional($.screen_section),
    ),

    file_section: $ => choice(
      seq(
        $._FILE,
        $._SECTION,
        '.',
        repeat($.file_description)
      ),
      seq(
        $.file_type,
        seq(
          $.file_description_entry,
          optional($.record_description_list),
          repeat1($.file_description)
        )
      )
    ),

    file_description: $ => seq(
      $.file_type,
      $.file_description_entry,
      $.record_description_list
    ),

    file_type: $ => choice(
      $.FD,
      $.SD
    ),

    file_description_entry: $ => seq(
      $.WORD,
      repeat($.file_description_clause),
      '.'
    ),

    record_description_list: $ => seq(
      repeat1(seq($.data_description, repeat1('.')))
    ),

    working_storage_section: $ => seq(
      $._WORKING_STORAGE, $._SECTION, '.',
      repeat(seq($.data_description, repeat1('.')))
    ),

    data_description: $ => choice(
      $.constant_entry,
      seq(
        $.level_number, $.entry_name,
        repeat($._data_description_clause), optional($._LITERAL)
      ),
      seq(
        $.level_number,
        repeat1($._data_description_clause), optional($._LITERAL)
      ),
      // Level 88 condition-name entries
      seq(
        $.level_number_88, $.entry_name,
        repeat($._data_description_clause)
      ),
    ),

    level_number: $ => /[0-9][0-9]?/,
    entry_name: $ => choice(
      $._FILLER,
      $._WORD
    ),

    _data_description_clause: $ => choice(
      $.redefines_clause,
      $.external_clause,
      $.global_clause,
      $.picture_clause,
      $.usage_clause,
      $.sign_clause,
      $.occurs_clause,
      $.justified_clause,
      $.synchronized_clause,
      $.blank_clause,
      $.based_clause,
      $.value_clause,
      $.renames_clause,
      $.any_length_clause,
      $.error
    ),

    _identifier: $ => prec.right(choice(
      $.qualified_word,
      seq($.qualified_word, $.subref),
      seq($.qualified_word, $.refmod),
      seq($.qualified_word, $.subref, $.refmod),
    )),

    // (no standalone user_defined_word rule; use inline alias for clarity)

    qualified_word: $ => sepBy(
      $.WORD, $._in_of
    ),

    _in_of: $ => choice(
      $._IN,
      $._OF
    ),

    picture_clause: $ => seq(
      choice($._PICTURE, $._PIC),
      optional($._IS),
      $._picture_string
    ),

    //todo
    _picture_string: $ => choice(
      $.picture_x,
      $.picture_n,
      $.picture_9,
      $.picture_a,
      $.picture_edit,
    ),

    picture_x: $ => /([xX](\([0-9]+\))?)+/,

    picture_9: $ => choice(
      $._picture_9_z,
      $._picture_9_v_1,
      $._picture_9_v_2,
      seq(
        optional(token(/[sS]/)),
        repeat1($.p9p_group),
        optional(seq(token(/[vV]/), repeat($.p9p_group)))
      )
    ),
    p9p_group: $ => token(/[pP9](\([0-9]+\))?/),
    _picture_9_z: $ => /[sS]?(9(\([0-9]+\))?)+([zZ](\([0-9]+\))?)+/,
    _picture_9_v_1: $ => /[sS]?([pP9](\([0-9]+\))?)+([vV]([pP9](\([0-9]+\))?)*)?/,
    _picture_9_v_2: $ => /[sS]?[vV]([pP9](\([0-9]+\))?)*/,

    usage_clause: $ => seq(
      optional(seq($._USAGE, optional($._IS))),
      $._usage
    ),

    _usage: $ => choice(
      $.BINARY,
      $.COMPUTATIONAL,
      $.COMP,
      $.COMP_1,
      $.COMP_2,
      $.COMP_3,
      $.COMP_4,
      $.COMP_5,
      $.COMP_X,
      $.DISPLAY,
      $.INDEX,
      $.PACKED_DECIMAL,
      $.POINTER,
      $.PROGRAM_POINTER,
      $.SIGNED_SHORT,
      $.SIGNED_INT,
      $.SIGNED_LONG,
      $.UNSIGNED_SHORT,
      $.UNSIGNED_INT,
      $.UNSIGNED_LONG,
      seq($.BINARY_CHAR, $.SIGNED),
      seq($.BINARY_CHAR, $.UNSIGNED),
      $.BINARY_CHAR,
      seq($.BINARY_SHORT, $.SIGNED),
      seq($.BINARY_SHORT, $.UNSIGNED),
      $.BINARY_SHORT,
      seq($.BINARY_LONG, $.SIGNED),
      seq($.BINARY_LONG, $.UNSIGNED),
      $.BINARY_LONG,
      seq($.BINARY_DOUBLE, $.SIGNED),
      seq($.BINARY_DOUBLE, $.UNSIGNED),
      $.BINARY_DOUBLE,
      seq($.BINARY_C_LONG, $.SIGNED),
      seq($.BINARY_C_LONG, $.UNSIGNED),
      $.BINARY_C_LONG,
      $.NATIONAL
    ),

    value_clause: $ => prec.right(seq(
      choice($._VALUE, $._VALUES),
      optional(choice($._IS, $._ARE)),
      repeat1($.value_item),
      optional($._WHEN),
      optional($._SET),
      optional($._TO),
      optional(seq(
        $._FALSE,
        optional($._IS),
        field('when_set_to_false', $._literal)))
    )),

    value_item: $ => seq(
      $._literal,
      optional(seq(
        $.THRU,
        $._literal
      ))
    ),

    procedure_division: $ => seq(
      $._PROCEDURE, $._DIVISION,
      optional($.procedure_using_chaining),
      optional($.procedure_returning),
      '.',
      optional($.procedure_declaratives),
      optional($._procedure_division_content)
    ),

    _procedure_division_content: $ => prec.right(choice(
      // Case 1: trailing statements group (with period) and optional statements
      seq(
        optional($._procedure_division_headers),
        repeat(seq(
          $._procedure_division_statements_before_header,
          $._procedure_division_headers,
        )),
        $._procedure_division_statements_before_header,
        repeat($._tail_statement)
      ),
      // Case 2: one or more (statements+period) followed by headers, finishing at a header
      seq(
        optional($._procedure_division_headers),
        repeat1(seq(
          $._procedure_division_statements_before_header,
          $._procedure_division_headers,
        ))
      ),
      // Case 3: trailing simple statements only
      seq(
        optional($._procedure_division_headers),
        repeat(seq(
          $._procedure_division_statements_before_header,
          $._procedure_division_headers,
        )),
        repeat1($._tail_statement)
      )
    )),

    section_header: $ => seq(
      field('name', choice($._WORD, $.integer)),
      $._SECTION,
      optional($._LITERAL),
      '.'
    ),

    paragraph_header: $ => seq(
      field('name', choice($.area_a_word, $._WORD, $.integer)),
      '.'
    ),

    _statement: $ => choice(
      $.accept_statement,
      $.add_statement,
      $.allocate_statement,
      $.alter_statement,
      $.call_statement,
      $.cancel_statement,
      $.close_statement,
      $.continue_statement,
      $.compute_statement,
      $.delete_statement,
      $.display_statement,
      $.divide_statement,
      $.exec_statement,
      $.exit_statement,
      $.free_statement,
      $.generate_statement,
      $.goback_statement,
      $.goto_statement,
      $.if_statement,

      $.ims_checkpoint_statement,
      $.ims_restart_statement,
      $.ims_rollback_statement,
      $.ims_schedtask_statement,
      $.ims_termtask_statement,
      $.ims_get_message_statement,
      $.ims_send_message_statement,
      $.ims_purge_message_statement,
      $.initialize_statement,
      $.inspect_statement,
      $.invoke_statement,
      $.merge_statement,
      $.move_statement,
      $.multiply_statement,
      $.open_statement,
      $.perform_statement_call_proc,
      $.perform_statement_loop,
      $.read_statement,
      $.receive_statement,
      $.release_statement,
      $.return_statement,
      $.rewrite_statement,
      $.search_statement,
      $.send_statement,
      $.set_statement,
      $.sort_statement,
      $.start_statement,
      $.stop_statement,
      $.string_statement,
      $.subtract_statement,
      $.suppress_statement,
      $.terminate_statement,
      $.transform_statement,
      $.unstring_statement,
      $.use_statement,
      $.write_statement,
      $.next_sentence_statement,
    ),

    period: $ => '.',

    copy_statement: $ => seq(
      $._COPY,
      field('book', optional(choice($.WORD, $.string))),
      field('lib_name', optional(seq(
        $._in_of,
        choice($.WORD, $.string)))
      ),
      field('supress', optional($.SUPPRESS)),
      // Tolerant REPLACING: accept any WORD/string sequence until period
      optional(seq(
        $._REPLACING,
        repeat1(choice(
          $.WORD,
          $.string,
          $.LEADING,
          $.TRAILING,
          $.BY
        ))
      )),
      '.'
    ),

    add_statement: $ => prec.right(seq(
      $._ADD,
      choice(
        seq(
          field('from', repeat1($._basic_value)),
          $._TO,
          field('to', repeat1($.arithmetic_x)),
        ),
        seq(
          field('from', repeat1($._basic_value)),
          $._GIVING,
          field('giving', repeat1($.arithmetic_x)),
        ),
        // Enhanced CORRESPONDING support
        seq(
          $._CORRESPONDING,
          field('from', $._identifier),
          $._TO,
          field('to', $._identifier)
        )
      ),
      optional(prec.right(seq(
        $._ON,
        $._SIZE,
        $._ERROR,
        field('size_error', repeat($._statement))
      ))),
      optional(prec.right(seq(
        $._NOT,
        $._ON,
        $._SIZE,
        $._ERROR,
        field('not_size_error', repeat($._statement))
      ))),
    )),

    compute_statement: $ => seq(
      $._COMPUTE,
      field('left', repeat1($.arithmetic_x)),
      choice('=', $._EQUAL),
      field('right', $.expr),
    ),

    display_statement: $ => seq(
      $._DISPLAY,
      $._display_body,
    ),

    _display_body: $ => prec.right(choice(
      seq($._id_or_lit, $._UPON_ENVIRONMENT_NAME),
      seq($._id_or_lit, $._UPON_ENVIRONMENT_VALUE),
      seq($._id_or_lit, $._UPON_ARGUMENT_NUMBER),
      seq($._id_or_lit, $._UPON_COMMAND_LINE),
      seq(repeat1($._x), optional($.at_line_column), optional($.with_clause)),
      seq(repeat1($._x), optional($.at_line_column), $.UPON, $.MNEMONIC_NAME, optional($.with_clause)),
      seq(repeat1($._x), optional($.at_line_column), $.UPON, $._WORD, optional($.with_clause)),
      seq(repeat1($._x), optional($.at_line_column), $.UPON, $.PRINTER, optional($.with_clause)),
      seq(repeat1($._x), optional($.at_line_column), $.UPON, $.CRT, optional($.with_clause)),
    )),

    evaluate_header: $ => prec.right(seq(
      $._EVALUATE,
      sepBy($.evaluate_subject, optional($._ALSO)),
    )),

    evaluate_subject: $ => choice(
      $.expr,
      $.TRUE,
      $.FALSE,
    ),

    when: $ => prec.right(repeat1(seq($._WHEN, $._evaluate_object_list))),

    _evaluate_object_list: $ => prec.right(sepBy($._evaluate_object, optional($._ALSO))),

    when_other: $ => $._WHEN_OTHER,

    goto_statement: $ => seq(
      $._GO, optional($._TO),
      field('to', repeat($.label)),
      field('depending', optional(seq($._DEPENDING, optional($._ON), $._identifier)))
    ),

    label: $ => choice(
      $.qualified_word,
      seq($._LITERAL, optional(seq($._in_of, $._LITERAL)))
    ),


    expr: $ => prec.left(choice(
      seq($.NOT, $.expr),
      seq($.expr, choice($.AND, $.OR), $.expr),
      $._expr_bool,
      seq("(", $.expr, ")")
    )),

    _expr_bool: $ => choice(
      $._expr_is,
      $._expr_compare,
      $._expr_calc,
      $.is_class,
      $.is_not_class,
    ),

    inspect_statement: $ => seq(
      $._INSPECT,
      field('send', choice(
        $._identifier,
        $._literal,
        $.function_
      )),
      repeat1(choice(
        $.inspect_tallying,
        $.inspect_replacing,
        $.inspect_converting,
      ))
    ),

    inspect_tallying: $ => seq(
      $._TALLYING,
      repeat1(choice(
        field('for', seq($._simple_value, $._FOR)),
        field('character', seq($._CHARACTERS, optional($.inspect_region))),
        field('all', $.ALL),
        field('leading', $.LEADING),
        field('trailing', $.TRAILING),
        field('two', seq($._simple_value, optional($.inspect_region))),
      ))
    ),

    _x: $ => choice(
      seq($._LENGTH, optional($._OF), choice(
        $._identifier,
        $._basic_literal,
        $.function_)
      ),
      seq($._ADDRESS, optional($._OF), choice(
        seq(
          choice($._PROGRAM, $._ENTRY),
          choice($._identifier, $._LITERAL)),
        $._identifier,
      )),
      $._literal,
      $.function_,
      $.linage_counter,
      $._identifier,
    ),

    arithmetic_x: $ => seq(
      $._x,
      optional($.ROUNDED)
    ),

    exec_statement: $ => prec.right(seq(
      $._EXEC,
      choice(
        seq($._SQL, repeat(choice($.exec_text, /\r?\n/))),
        seq($._CICS, $.cics_command),
        seq($._DLI, repeat(choice($.exec_text, /\r?\n/))),
        seq($._SQLIMS, repeat(choice($.exec_text, /\r?\n/)))
      ),
      choice(
        seq($._END_EXEC, optional('.')),
        '.' // some dialects terminate EXEC blocks with a period
      )
    )),

    exec_text: $ => token(prec(-1, /[^\r\n]+/)),

    // CICS command structure
    _simple_value: $ => choice(
      $._identifier,
      $._basic_literal
    ),

    _basic_value: $ => choice(
      $._LITERAL,
      $.SPACE,
      $.ZERO,
      $.ZEROS,
      $.QUOTE,
      $.HIGH_VALUE,
      $.LOW_VALUE,
      $.TOK_NULL
    ),

    _literal: $ => choice(
      $._basic_literal,
      seq($.ALL, $._basic_value)
    ),

    _LITERAL: $ => choice(
      $.number,
      $._string,
    ),

    //todo
    number: $ => choice($.integer, $.decimal),
    integer: $ => /[+-]?[0-9,]+/,
    string: $ => choice(
      /('[^'\n]*')+/,
      /("[^"\n]*")+/,
      $._multiline_string,
    ),

    _ADD: $ => /[aA][dD][dD]/,
    _ALSO: $ => /[aA][lL][sS][oO]/,
    _ARE: $ => /[aA][rR][eE]/,
    _CHARACTERS: $ => /[cC][hH][aA][rR][aA][cC][tT][eE][rR][sS]/,
    _COPY: $ => /[cC][oO][pP][yY]/,
    _COMPUTE: $ => /[cC][oO][mM][pP][uU][tT][eE]/,
    _CORRESPONDING: $ => /[cC][oO][rR][rR]([eE][sS][pP][oO][nN][dD][iI][nN][gG])?/,
    _CICS: $ => /[cC][iI][cC][sS]/,
    _DATA: $ => /[dD][aA][tT][aA]/,
    _DEPENDING: $ => /[dD][eE][pP][eE][nN][dD][iI][nN][gG]/,
    _DISPLAY: $ => /[dD][iI][sS][pP][lL][aA][yY]/,
    _DIVISION: $ => /[dD][iI][vV][iI][sS][iI][oO][nN]/,
    _EQUAL: $ => /[eE][qQ][uU][aA][lL]/,
    _ERROR: $ => /[eE][rR][rR][oO][rR]/,
    _EVALUATE: $ => /[eE][vV][aA][lL][uU][aA][tT][eE]/,
    _EXEC: $ => /[eE][xX][eE][cC]/,
    _END_EXEC: $ => /[eE][nN][dD]-[eE][xX][eE][cC]/,
    _FILLER: $ => /[fF][iI][lL][lL][eE][rR]/,
    _FOR: $ => /[fF][oO][rR]/,
    _SQL: $ => /[sS][qQ][lL]/,
    _DLI: $ => /[dD][lL][iI]/,
    _SQLIMS: $ => /[sS][qQ][lL][iI][mM][sS]/,
    _WHEN: $ => /[wW][hH][eE][nN]/,
    _GIVING: $ => /[gG][iI][vV][iI][nN][gG]/,
    _GO: $ => /[gG][oO]/,
    _IDENTIFICATION: $ => /[iI][dD][eE][nN][tT][iI][fF][iI][cC][aA][tT][iI][oO][nN]/,
    _ID_ABBR: $ => /[iI][dD]/,
    _INSPECT: $ => /[iI][nN][sS][pP][eE][cC][tT]/,
    _IS: $ => /[iI][sS]/,
    _NOT: $ => /[nN][oO][tT]/,
    _ON: $ => /[oO][nN]/,
    _PIC: $ => /[pP][iI][cC]/,
    _SET: $ => /[sS][eE][tT]/,
