test/corpus/arithmetic.txt
====================================
ADD and COMPUTE basics
====================================
       identification division.
       program-id. a.
       data division.
       working-storage section.
       77 A PIC 9.
       77 B PIC 9.
       procedure division.
       ADD 1 TO A.
       COMPUTE B = A + 2.
---

(start
  (program_definition
    (identification_division
      (program_name))
    (data_division
      (working_storage_section
        (data_description
          (level_number)
          (entry_name)
          (picture_clause
            (picture_9
              (p9p_group))))
        (data_description
          (level_number)
          (entry_name)
          (picture_clause
            (picture_9
              (p9p_group))))))
    (procedure_division
      (add_statement
        (number
          (integer))
        (arithmetic_x
          (qualified_word
            (WORD))))
      (period)
      (compute_statement
        (arithmetic_x
          (qualified_word
            (WORD)))
        (expr
          (qualified_word
            (WORD))
          (number
            (integer))))
      (period))))
