test/corpus/evaluate.txt
====================================
evaluate when
====================================
       identification division.
       program-id. a.
       procedure division.
       evaluate 1
       when 1
         go to aa
       end-evaluate.
       aa.
---

(start
  (program_definition
    (identification_division
      (program_name))
    (procedure_division
      (evaluate_header
        (evaluate_subject
          (expr
            (number
              (integer)))))
      (when
        (expr
          (number
            (integer))))
      (goto_statement
        to: (label
          (qualified_word
            (WORD))))
      (END_EVALUATE)
      (period)
      (paragraph_header
        name: (area_a_word)))))

====================================
evaluate when 2
====================================
       identification division.
       program-id. a.
       procedure division.
       evaluate 1
       when 1
         go to aa
       when 2
         go to aa
       end-evaluate.
       aa.
---

(start
  (program_definition
    (identification_division
      (program_name))
    (procedure_division
      (evaluate_header
        (evaluate_subject
          (expr
            (number
              (integer)))))
      (when
        (expr
          (number
            (integer))))
      (goto_statement
        to: (label
          (qualified_word
            (WORD))))
      (when
        (expr
          (number
            (integer))))
      (goto_statement
        to: (label
          (qualified_word
            (WORD))))
      (END_EVALUATE)
      (period)
      (paragraph_header
        name: (area_a_word)))))

====================================
evaluate when other
====================================
       identification division.
       program-id. a.
       procedure division.
       evaluate 1
       when 1
         go to aa
       when 2
         go to aa
       when other
         go to aa
       end-evaluate.
       aa.
---

(start
  (program_definition
    (identification_division
      (program_name))
    (procedure_division
      (evaluate_header
        (evaluate_subject
          (expr
            (number
              (integer)))))
      (when
        (expr
          (number
            (integer))))
      (goto_statement
        to: (label
          (qualified_word
            (WORD))))
      (when
        (expr
          (number
            (integer))))
      (goto_statement
        to: (label
          (qualified_word
            (WORD))))
      (when_other)
      (goto_statement
        to: (label
          (qualified_word
            (WORD))))
      (END_EVALUATE)
      (period)
      (paragraph_header
        name: (area_a_word)))))

====================================
evaluate when when
====================================
       identification division.
       program-id. a.
       procedure division.
       evaluate 1
       when 1
       when 2
         go to aa
       end-evaluate.
       aa.
---

(start
  (program_definition
    (identification_division
      (program_name))
    (procedure_division
      (evaluate_header
        (evaluate_subject
          (expr
            (number
              (integer)))))
      (when
        (expr
          (number
            (integer)))
        (expr
          (number
            (integer))))
      (goto_statement
        to: (label
          (qualified_word
            (WORD))))
      (END_EVALUATE)
      (period)
      (paragraph_header
        name: (area_a_word)))))

====================================
evaluate when also
====================================
       identification division.
       program-id. a.
       procedure division.
       evaluate 1 also 2
       when 1 also 2
         go to aa
       end-evaluate.
       aa.
---

(start
  (program_definition
    (identification_division
      (program_name))
    (procedure_division
      (evaluate_header
        (evaluate_subject
          (expr
            (number
              (integer))))
        (evaluate_subject
          (expr
            (number
              (integer)))))
      (when
        (expr
          (number
            (integer)))
        (expr
          (number
            (integer))))
      (goto_statement
        to: (label
          (qualified_word
            (WORD))))
      (END_EVALUATE)
      (period)
      (paragraph_header
        name: (area_a_word)))))
